--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
     }
   ],
   "require": {
-    "php": "^7.3.11",
+    "php": "^7.4",
     "ext-json": "*",
-    "guzzlehttp/guzzle": "7.0"
+    "guzzlehttp/guzzle": "7.0",
+    "nesbot/carbon": "^2.41"
   },
   "autoload": {
     "psr-4": {
@@ -21,5 +22,9 @@
     "files": [
       "src/constants.php"
     ]
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.4",
+    "squizlabs/php_codesniffer": "^3.5"
   }
 }
