--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "name": "acces-tech/sherweb-api",
   "description": "API Interface for Sherweb API",
   "minimum-stability": "stable",
-  "license": "proprietary",
+  "license": "MIT",
+  "version": "0.0.1",
   "authors": [
     {
       "name": "Vincent D. Handfield",
