correct package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "acces-tech/sherweb-api",
+  "name": "accestech/sherweb-api",
   "description": "API Interface for Sherweb API",
   "minimum-stability": "stable",
   "license": "MIT",
