--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "API Interface for Sherweb API",
   "minimum-stability": "stable",
   "license": "MIT",
-  "version": "0.0.1",
+  "version": "v0.0.3",
   "authors": [
     {
       "name": "Vincent D. Handfield",
